# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
page_loader/: args_parser.py  file_helper.py  internal_exceptions.py  logger.py  page_content_helper.py  page_loader_engine.py  requests_helper.py
page_loader/scripts/: page_loader.py
tests/: test_exceptions.py  test_main.py  test_page_loader.py
tests/fixtures/: exp_web_page.html  initial_web_page.html  web_page.html
tests/fixtures/links_scripts_download/: Script.js  exp_web_page.html  initial_web_page.html
